helm-chart/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
  labels:
    app: immich
  name: immich
  namespace: immich
spec:
  rules:
  - host: immich.home-lab.begoodguys.ovh
    http:
      paths:
      - backend:
          service:
            name: immich-server
            port: 
              number: 2283
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - immich.home-lab.begoodguys.ovh
    secretName: tls-immich-http
